@@ -30,19 +30,27 @@ static std::string get_adjustement_glsl()
 		"\n	** http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?t=21057																																					"
 		"\n	*/																																																				   "
 		"\n																																																					   "
-		"\n	vec3 ContrastSaturationBrightness(vec3 color, float brt, float sat, float con)																																	   "
+		"\n	vec3 ContrastSaturationBrightness(vec4 color, float brt, float sat, float con)																																	   "
 		"\n	{																																																				   "
 		"\n		const float AvgLumR = 0.5;																																													   "
 		"\n		const float AvgLumG = 0.5;																																													   "
 		"\n		const float AvgLumB = 0.5;																																													   "
 		"\n																																																					   "
 		"\n		const vec3 LumCoeff = vec3(0.2125, 0.7154, 0.0721);																																							   "
+		"\n		bool demultiply_remultiply = con < 1.0;																																																		   "
+		"\n																																																					   "
+		"\n		if (demultiply_remultiply && color.a > 0.0)																																																			   "
+		"\n			color.rgb /= color.a;																																																		   "
 		"\n																																																					   "
 		"\n		vec3 AvgLumin = vec3(AvgLumR, AvgLumG, AvgLumB);																																							   "
-		"\n		vec3 brtColor = color * brt;																																												   "
+		"\n		vec3 brtColor = color.rgb * brt;																																												   "
 		"\n		vec3 intensity = vec3(dot(brtColor, LumCoeff));																																								   "
 		"\n		vec3 satColor = mix(intensity, brtColor, sat);																																								   "
 		"\n		vec3 conColor = mix(AvgLumin, satColor, con);																																								   "
+		"\n																																																					   "
+		"\n		if (demultiply_remultiply)																																								   "
+		"\n			conColor.rgb *= color.a;																																																	   "
+		"\n																																																					   "
 		"\n		return conColor;																																															   "
 		"\n	}																																																					"
 		"\n																																																					   "
